src/objects/Game__c.object
<CustomObject>
    <fields>
        <fullName>GameNumber__c</fullName>
        <displayFormat>G-{000000}</displayFormat>
        <label>ゲームNo.</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>ジャンル</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageURL__c</fullName>
        <label>画像URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE( ImageURL__c , &quot;ゲーム画像&quot; , 400, 400)</formula>
        <label>イメージ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maker__c</fullName>
        <label>メーカー</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ゲーム</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Genre__c</columns>
        <columns>Maker__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>ゲーム</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>